Solr/Deployment/solr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr-deployment
  labels:
    app: solr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: solr
  minReadySeconds: 60    
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: solr     
    spec:
      containers:
      - name: solr
        image: solr
        resources:
          requests:
            cpu: "0.5"
          limits:
            cpu: "1"   
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: solr-service
spec:
  selector:
    app: solr
  type: ClusterIP
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 8082
